# ProjektSemestralny

./: README.md  run_analysis.py  setup.cfg  tests.py
package/: run_analysis.py  setup.cfg  test_file_1.csv  test_file_2.csv  test_file_3.csv  tests.py
package/data_analysis/: analysis.py  load_clear_merge.py
src/data_analysis/: analysis.py  load_clear_merge.py
