[metadata]
name = package
description = projekt semestralny NYPD
author = Zuzanna Niewiadomska

[options] 
packages = 
  package
python_requires = >=3.8



install_requires = 
  numpy 
  pandas
  os
  fuzzywuzzy
  pycountry
  argparse


[options.package_data]
package =
  test_file_1.csv
  test_file_2.csv
  test_file_3.csv

